Fixed about image on tablet

--- a/css/main.scss
+++ b/css/main.scss
@@ -867,6 +867,9 @@ img {
   .third-img {
     width: 234px;
 }
+  .about-image {
+    width: 100%;
+  }
 
 }
 
